# Wapt

./: CMakeLists.txt  README.md  README_zh.md  add_url.py
.github/workflows/: release.yml
cmake/: WebUIApp.cmake
icons/: astrbotdb.rc  deepseek.rc  kimi.rc
src/: deepseek.c  desmos.c  kimi.c  qwen.c
src/AstrBotDB/: astrbotdb.c
src/DeepSeek/: deepseek.rc
src/Desmos/: desmos.c  desmos.rc
src/Kimi/: kimi.c
src/Qwen/: qwen.c  qwen.rc
src/Z.ai/: glm.rc  z.ai.c  z.ai.rc
